# GenUI

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: static_preview.html
app/src/main/cpp/: CMakeLists.txt  qwen_coder_bridge.cpp
app/src/main/java/com/samsung/genuiapp/: CpuThreadHeuristics.kt  MainActivity.kt  PreviewActivity.kt  QwenCoderBridge.kt  UiGenerationUtils.kt
app/src/main/res/layout/: activity_main.xml  activity_preview.xml
app/src/main/res/values/: strings.xml
scripts/: build_llama_snapdragon8elite.sh
